Updated RRO for Dewd for CarService resources
- Set config_isUsingAutoTaskStackWindowing true for dewd targets as it would be using Auto Task stack windowing
- Updated CarFullScreen listener with Task Repository

Flag: com.android.wm.shell.enable_auto_task_stack_controller

Bug: 392757141
Test: atest TaskRepositoryTest CarPackageManagerServiceTest AutoTaskStackControllerImplTest

(cherry picked from https://googleplex-android-review.googlesource.com/q/commit:811e98c39548f7919345861f9618a7a1710d19ea)

Change-Id: Ic184119b796aa12f000f43f250e98e7133d76ad4
Merged-In: Ic184119b796aa12f000f43f250e98e7133d76ad4

--- a/car_product/dewd/rro/CarUpdatableDewdRRO/res/values/config.xml
+++ b/car_product/dewd/rro/CarUpdatableDewdRRO/res/values/config.xml
@@ -23,4 +23,5 @@
      resolve permission by itself to use any higher priority window type.
      Setting this string to empty will disable the feature. -->
     <string name="config_userNoticeUiService" translatable="false"></string>
+    <bool name="config_isUsingAutoTaskStackWindowing">true</bool>
 </resources>
