--- a/car_product/dewd/rro/CarUpdatableDewdRRO/res/xml/overlays.xml
+++ b/car_product/dewd/rro/CarUpdatableDewdRRO/res/xml/overlays.xml
@@ -16,4 +16,5 @@
   -->
 <overlay>
     <item target="string/config_userNoticeUiService" value="@string/config_userNoticeUiService" />
+    <item target="bool/config_isUsingAutoTaskStackWindowing" value="@bool/config_isUsingAutoTaskStackWindowing" />
 </overlay>
