Fix incorrect ControlBarActivity being used
Config was mapping portrait launcher to use the default
ControlBarActivity instead of the car_ui_portrait one.

Bug: 394350634
Test: manual
Flag: EXEMPT bug_fix
(cherry picked from https://googleplex-android-review.googlesource.com/q/commit:9ab812bf4439d209c7c1638aea6c833f98617638)

Merged-In: I30243a24a9d725a7fd07d271c4b7ce8d3771e098
Change-Id: I30243a24a9d725a7fd07d271c4b7ce8d3771e098

--- a/car_product/dewd/rro/CarSystemUIDewdUIRRO/res/values/config.xml
+++ b/car_product/dewd/rro/CarSystemUIDewdUIRRO/res/values/config.xml
@@ -34,6 +34,6 @@
     <string-array name="config_default_activities" translatable="false">
         <item>app_grid_panel;com.android.car.portraitlauncher/com.android.car.carlauncher.AppGridActivity</item>
         <item>map_panel;com.android.car.portraitlauncher/.homeactivities.BackgroundPanelBaseActivity</item>
-        <item>contextual_bar_panel;com.android.car.portraitlauncher/com.android.car.carlauncher.ControlBarActivity</item>
+        <item>contextual_bar_panel;com.android.car.portraitlauncher/.controlbar.ControlBarActivity</item>
     </string-array>
 </resources>
