Allow notification manage button to close panels in scalable UI
Fixes: 400496432
Test: manual
Flag: EXEMPT bugfix
(cherry picked from https://googleplex-android-review.googlesource.com/q/commit:ce539dc251b7d83d3da66ceb0a67bb5690988b57)
Merged-In: Ie62e4ecb60d1b5bcee85dc94becf82d6a719b8c3
Change-Id: Ie62e4ecb60d1b5bcee85dc94becf82d6a719b8c3

--- a/car_product/car_ui_portrait/rro/CarUiPortraitNotificationRRO/res/values/config.xml
+++ b/car_product/car_ui_portrait/rro/CarUiPortraitNotificationRRO/res/values/config.xml
@@ -47,7 +47,7 @@
     <item name="config_olderNotificationsAlpha" format="float" type="dimen">1</item>
 
     <!-- Whether to collapse notification shade panel after manage button click -->
-    <bool name="config_collapseShadePanelAfterManageButtonPress">false</bool>
+    <bool name="config_collapseShadePanelAfterManageButtonPress">true</bool>
 
     <!-- Whether to show expansion header in group notifications.  -->
     <bool name="config_showExpansionHeader">false</bool>
