Enable new media card in PotraitLauncher
Fixes: 401364717
Fixes: 400729032
Test: manual
Flag: EXEMPT bugfix
Change-Id: Iac01e01a7f08da029f41ee0a6c4b10849e887117

--- a/car_product/car_ui_portrait/rro/CarUiPortraitLauncherReferenceRRO/res/layout/card_fragment.xml
+++ b/car_product/car_ui_portrait/rro/CarUiPortraitLauncherReferenceRRO/res/layout/card_fragment.xml
@@ -19,7 +19,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card_view"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="@dimen/card_fragment_height"
     app:cardCornerRadius="@dimen/car_portrait_ui_window_rounded_corner_radius"
     android:visibility="gone">
 
@@ -32,6 +32,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:layout_marginVertical="@dimen/card_fragment_margin_vertical"
         android:layout_marginHorizontal="@dimen/card_fragment_margin_horizontal">
         <FrameLayout
